# ruleta

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  MarcLbl.cpp  MarcLbl.h  Marcador.cpp  Marcador.h  Marcador.ui  README.md  WWheel.cpp  WWheel.h  WWheel.ui  dialog.cpp  dialog.h  dialog.ui  main.cpp
.github/workflows/: build-linux.yml  build-macos.yml
main_widgets/: CTimer.cpp  CTimer.h  CTimer.ui  MarcLbl.cpp  MarcLbl.h  MarcLbl.ui  Marcador.cpp  Marcador.h  WWheel.cpp  WWheel.h  WWheel.ui  marcLbl.cpp  marcador.cpp  marcador.h  marcador.ui  marclbl.cpp  timer.cpp  timer.h  timer.ui  wheel.cpp  wheel.h  wheel.ui
resources/: resources.qrc
ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  TimerDialog.cpp  TimerDialog.ui  dialog.cpp  dialog.h  dialog.ui  mainwindow.cpp  mainwindow.ui  propertiesdialog.cpp  propertiesdialog.h  propertiesdialog.ui  timerdialog.cpp  timerdialog.h  timerdialog.ui
